--- a/www/templates/backend/generate/pdf/1/style.css
+++ b/www/templates/backend/generate/pdf/1/style.css
@@ -70,6 +70,7 @@
 .table td {
     border-bottom: 1px solid #666;
     border-spacing: 0px;
+    padding-right: 10px; padding-left: 10px;
 }
 .table th {
     border-bottom: 2px solid black;
